Limited searching to 1 request per user
